update login and register. finish

--- a/GhasreMobile/Views/Account/ChangePassword.cshtml
+++ b/GhasreMobile/Views/Account/ChangePassword.cshtml
@@ -4,8 +4,16 @@
     ViewData["Image"] = "/st/r/Entry_1.png";
     Layout = "_AccountLayout.cshtml";
 }
-
-<form asp-action="ChangePassword" method="post" asp-area="" class="form-block col">
+@section Scripts
+{
+    <partial name="_CaptchaScripts" />
+}
+<form asp-action="ChangePassword" method="post" asp-area="" class="form-block col"
+      data-ajax="true"
+      data-ajax-method="POST"
+      data-ajax-mode="replace"
+      data-ajax-complete="LoadingEnd()">
+    <partial name="_CaptchaInput" />
     <input class="input" asp-for="Auth" type="hidden" />
     <input class="input" asp-for="Tell" type="hidden" />
     <h3 class="uk-margin-medium-bottom">
@@ -25,7 +33,7 @@
     </div>
 
     <div class="actions gap-t">
-        <button class="btn btn-primary">تایید</button>
+        <button class="btn btn-primary" onclick="LoadingRun()">تایید</button>
     </div>
 
 </form>
