--- a/GhasreMobile/Views/Account/ForgotPassword.cshtml
+++ b/GhasreMobile/Views/Account/ForgotPassword.cshtml
@@ -8,7 +8,11 @@
 {
     <partial name="_CaptchaScripts" />
 }
-<form asp-action="ForgotPassword" method="post" asp-area="" class="form-block col">
+<form asp-action="ForgotPassword" method="post" asp-area="" class="form-block col"
+      data-ajax="true"
+      data-ajax-method="POST"
+      data-ajax-mode="replace"
+      data-ajax-complete="LoadingEnd()">
     <partial name="_CaptchaInput" />
     <h3 class="uk-margin-remove-bottom">
         بازیابی رمز عبور
@@ -26,7 +30,7 @@
 
     <div class="actions gap-t">
         <a href="/Login" class="btn btn-link">بازگشت</a>
-        <button class="btn btn-primary">بازیابی</button>
+        <button class="btn btn-primary" onclick="LoadingRun()">بازیابی</button>
     </div>
 
 </form>
