--- a/GhasreMobile/wwwroot/css/Load.css
+++ b/GhasreMobile/wwwroot/css/Load.css
@@ -20,7 +20,7 @@
     width: 40px;
     height: 40px;
     border: 4px #ddd solid;
-    border-top: 4px red solid;
+    border-top: 4px #96027E solid;
     border-radius: 50%;
     animation: sp-anime 0.8s infinite linear;
 }
