--- a/GhasreMobile/Views/Home/Index.cshtml
+++ b/GhasreMobile/Views/Home/Index.cshtml
@@ -185,34 +185,9 @@
     </div>
 </div>
 
-<form class="mat-card uk-margin-remove-top">
-    <h3>درخواست خدمات درب منزل</h3>
-    <p class="text-3">برای درحواست خدمات تعمیراتی و گارانتی درب منزل این فرم را پر کنید </p>
-    <div class="col">
-        <div class="col-at-xs col-at-s rowr-at-m rowr-at-l gap-card
-             rowr-at-xl uk-child-width-1-2-at-m uk-child-width-1-2-at-l uk-child-width-1-2-at-xl
-             uk-child-width-1-1-at-xs uk-child-width-1-1-at-s">
-            <div class="fg-col uk-margin-remove-bottom">
-                <label for="Name" class="fg-label">نام و نام خانوادگی</label>
-                <input id="Name" name="Name" type="text" class="entry" value="" />
-                <span class="text-danger"></span>
-            </div>
-            <div class="fg-col">
-                <label for="TelNo" class="fg-label">شماره تلفن</label>
-                <input id="TelNo" name="TelNo" type="tel" class="entry" value="" />
-                <span class="text-danger"></span>
-            </div>
-        </div>
-        <div class="fg-col">
-            <label for="Address" class="fg-label">آدرس</label>
-            <textarea id="Address" name="Address" class="entry"></textarea>
-            <span class="text-danger"></span>
-        </div>
-    </div>
-    <div class="rowr gap-t">
-        <button class="btn btn-primary">فرستادن درخواست</button>
-    </div>
-</form>
+@await Component.InvokeAsync("DeliveryView")
+
+
 
 <div class="questions mat-card uk-padding-remove">
     <a href="#faq" name="faq"></a>
