--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -539,6 +539,11 @@
     <script src="~/js/uikit.min.js"></script>
     <script src="~/js/uikit-icons.js"></script>
 
+
+    <script src="~/Validate/jquery.validate.min.js"></script>
+    <script src="~/Validate/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Validate/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="~/Validate/jquery.validate.unobtrusive.js"></script>
     <script>
         function LoadingRun(form) {
             if (!$(form).valid()) return;
