--- a/GhasreMobile/Areas/Admin/Views/Comment/Components/CommentInfo.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Comment/Components/CommentInfo.cshtml
@@ -1,5 +1,34 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿<div class="modal-header">
+    <h6 class="modal-title" id="modalCenterTitle">
+        جزئیات نظرات
+    </h6>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+<div class="modal-body">
+    <div id="card-table" class="card-body flex-div">
+        <div class="form-row ">
+            <div class="form-group col-md-4">
+                <label>نام کاربری:</label>
+                <span>نام کاربری1</span>
+            </div>
+            <div class="form-group col-md-4">
+                <label>تاریخ ثبت:</label>
+                <span>فلان تاریخ</span>
+            </div>
+            <div class="form-group col-md-4">
+                <label>وضعیت: </label>
+                <span class="text-success">تایید شده</span>
+                <span class="text-warning">تایید نشده</span>
+            </div>
+            <div class="form-group col-12">
+                <label>متن:</label>
+                <div class="bg-light p-3 uk-border-rounded">
+                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
