--- a/GhasreMobile/Areas/Admin/Views/Property/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Property/Index.cshtml
@@ -4,3 +4,73 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
+<div class="row flex-div">
+    <div class="col-md-12 flex-div pb-3 pt-3">
+        <div class="card flex-div border-0 main-shadow">
+            <div class="card-header bg-white">
+                <div class="pr-1 pt-2">
+                    <div class="form-row">
+                        <label class="uk-text-bold mt-md-1 ml-1">افزودن ویژگی:</label>
+                        <div class="form-group">
+                            <input class="form-control" placeholder="مثال : حافظه داخلی">
+                        </div>
+                        <div class="form-group col-md-2">
+                            <a href="#" class="btn btn-success btn-sm"> افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></a>
+                        </div>
+                    </div>
+                    @*<div class="card-form form-row">
+            <label >افزودن ویژگی:</label>
+            <div class="form-input">
+                <div class="form-inline">
+                    <div class="form-group mx-sm-1 mb-2">
+                        <input class="form-control uk-text-small" type="text" placeholder="مثال: ابعاد">
+                    </div>
+                </div>
+            </div>
+            <div class="form-group pb-0 mb-0 mr-md-3">
+                <a id="Create" href="#" class="btn btn-success btn-sm"> افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></a>
+            </div>
+        </div>*@
+                    @*<div class="form-group pb-0 mb-0">
+            <input />
+            <button id="Create" data-toggle="modal" data-target="#modalSave" class="btn btn-success btn-sm">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></button>
+        </div>*@
+                </div>
+            </div>
+            <div id="card-table" class="card-body flex-div">
+                <div class="table-responsive flex">
+                    <table class="table fixed">
+                        <thead class="thead-light">
+                            <tr>
+                                <th>نام</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+            <div class="card-footer bg-white">
+                <nav aria-label="Page navigation example">
+                    @*  @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })*@
+                </nav>
+            </div>
+        </div>
+    </div>
+</div>
+@section Script{
+    <script>
+
+        $("#Create").click(function () {
+            $(".modal-content").html("");
+            $.get("/Admin/Property/Create", function (result) {
+                $(".modal-content").html(result);
+            });
+        });
+
+    </script>
+}
