--- a/GhasreMobile/Views/Account/_AccountLayout.cshtml
+++ b/GhasreMobile/Views/Account/_AccountLayout.cshtml
@@ -20,7 +20,7 @@
 <body>
 
     <header class="home">
-        <a uk-icon="home" href=""></a>
+        <a uk-icon="home" class="link-text" href="/"></a>
     </header>
 
 
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="l-image">
-            <img src="~/st/v/biscuits/account_biscuit.svg" class="l-cover"/>
+            <img src="~/st/v/biscuits/account_biscuit.svg" class="l-cover" />
             <img src="@(ViewData["Image"] ?? "/st/r/Entry_2.png")" alt="" />
         </div>
     </main>
