--- a/GhasreMobile/Views/Forum/ForumView.cshtml
+++ b/GhasreMobile/Views/Forum/ForumView.cshtml
@@ -64,52 +64,13 @@
     <h3>نظرات کاربران</h3>
     <ul>
         <li>
-            <div class="comment col">
-                <div class="rowr">
-                    <h5 class="text-2">مهتاب دادسرشت</h5>
-                    <label class="text-4 uk-margin-auto-right">3 روز پیش</label>
-                </div>
-                <p>
-                    از آنجایی که طراحان عموما نویسنده متن نیستند و وظیفه رعایت حق تکثیر متون را ندارند و در همان حال کار آنها به نوعی وابسته به متن می‌باشد آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند.
-                </p>
-                <div class="actions">
-                    @*<a href="" uk-tooltip="لایک کردن" class="gap-l" uk-icon="heart-outline"></a>*@
-                    @*<a href="" uk-tooltip="ثبت پاسخ" class="" uk-icon="arrow-redo"></a>*@
-                    @*<a href="" uk-tooltip="گزارش" class="uk-margin-auto-right" uk-icon="megaphone"></a>*@
-                </div>
-            </div>
+            <partial name="_CommentBlock" />
         </li>
         <li>
-            <div class="comment col">
-                <div class="rowr">
-                    <h5 class="text-2">مهتاب دادسرشت</h5>
-                    <label class="text-4 uk-margin-auto-right">3 روز پیش</label>
-                </div>
-                <p>
-                    از آنجایی که طراحان عموما نویسنده متن نیستند و وظیفه رعایت حق تکثیر متون را ندارند و در همان حال کار آنها به نوعی وابسته به متن می‌باشد آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند.
-                </p>
-                <div class="actions">
-                    @*<a href="" uk-tooltip="لایک کردن" class="gap-l" uk-icon="heart-outline"></a>*@
-                    @*<a href="" uk-tooltip="ثبت پاسخ" class="" uk-icon="arrow-redo"></a>*@
-                    @*<a href="" uk-tooltip="گزارش" class="uk-margin-auto-right" uk-icon="megaphone"></a>*@
-                </div>
-            </div>
+            <partial name="_CommentBlock" />
         </li>
         <li>
-            <div class="comment col">
-                <div class="rowr">
-                    <h5 class="text-2">مهتاب دادسرشت</h5>
-                    <label class="text-4 uk-margin-auto-right">3 روز پیش</label>
-                </div>
-                <p>
-                    از آنجایی که طراحان عموما نویسنده متن نیستند و وظیفه رعایت حق تکثیر متون را ندارند و در همان حال کار آنها به نوعی وابسته به متن می‌باشد آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند.
-                </p>
-                <div class="actions">
-                    @*<a href="" uk-tooltip="لایک کردن" class="gap-l" uk-icon="heart-outline"></a>*@
-                    @*<a href="" uk-tooltip="ثبت پاسخ" class="" uk-icon="arrow-redo"></a>*@
-                    @*<a href="" uk-tooltip="گزارش" class="uk-margin-auto-right" uk-icon="megaphone"></a>*@
-                </div>
-            </div>
+            <partial name="_CommentBlock" />
         </li>
     </ul>
 </div>
