--- a/GhasreMobile/wwwroot/css/pages/forum.css
+++ b/GhasreMobile/wwwroot/css/pages/forum.css
@@ -118,7 +118,8 @@ backdrop-filter: saturate(80%);
     background-color: #FCFCFC;
     border-left: 1px solid #e9e9e9;
     display: flex;
-    flex-direction: column; }
+    flex-direction: column;
+    margin-top: 0; }
     .forum-block .controls .col {
       padding: 4px 0;
       margin-bottom: auto; }
@@ -132,3 +133,23 @@ backdrop-filter: saturate(80%);
 
 .threads .forum-block {
   margin-bottom: 12px; }
+
+@media only screen and (max-width: 564px) {
+  .forum-block {
+    grid-template-columns: auto 34px; }
+    .forum-block .content h5 {
+      font-size: 14px; }
+    .forum-block .content .rowr span {
+      font-size: 11px; }
+    .forum-block .content .forum-body {
+      margin-top: 6px; }
+      .forum-block .content .forum-body p {
+        font-size: 11px; }
+    .forum-block .content .action {
+      display: flex;
+      flex-direction: row;
+      grid-column-gap: 3px; }
+      .forum-block .content .action span {
+        color: #666; }
+  .threads .forum-block {
+    margin-bottom: 12px; } }
