--- a/GhasreMobile/wwwroot/css/pages/user.scss
+++ b/GhasreMobile/wwwroot/css/pages/user.scss
@@ -27,8 +27,62 @@ $nav-height: 64px;
     }
 }
 
-/*#region Main */
+#fnav {
+    .uk-modal-body {
+        width: 260px;
 
+        .user-navigation {
+            padding: 0;
+            margin: 0;
+            position: relative;
+
+            a {
+                color: #787878;
+                padding: 12px 16px 12px 20px;
+                border-left: 0;
+                text-align: right;
+                @include trans(.2s);
+                display: block;
+                white-space: nowrap;
+            }
+
+            a:hover {
+                color: $primary;
+            }
+
+            a.active {
+                border-right: 3px $primary solid;
+            }
+        }
+    }
+}
+
+.space-nav-header {
+    height: 46px !important;
+}
+
+.floating-navigation {
+    display: none;
+    position: fixed;
+    bottom: 32px;
+    right: 32px;
+    padding: 4px;
+    background-color: $primary;
+    @include subtle-glow(transparentize($primary,.64));
+    outline: none;
+    border: 0;
+    @include border-def-radius;
+    color: #fff;
+    z-index: 100;
+}
+
+@media only screen and (max-width: 960px) {
+    .floating-navigation {
+        display: block;
+    }
+}
+
+/*#region Main */
 $grid-gap: 16px;
 $aside-width: 142px;
 
@@ -36,6 +90,7 @@ $aside-width: 142px;
     display: grid;
     grid-template-columns: 1fr $aside-width;
     grid-gap: $grid-gap;
+    min-height: calc(100vh - 138px);
 
     .m-aside {
         @include column;
