--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -204,230 +204,7 @@
         <div id="dropbar">
             <div class="uk-container">
                 <div class="grid" onclick="CategoryClick()">
-                    <section>
-                        <h4>
-                            برند های گوشی
-                        </h4>
-                        <ul>
-                            <li>
-                                <a href="">سامسونگ</a>
-                            </li>
-                            <li>
-                                <a href="">هواوی</a>
-                            </li>
-                            <li>
-                                <a href="">اپل</a>
-                            </li>
-                            <li>
-                                <a href="">شیائومی</a>
-                            </li>
-                            <li>
-                                <a href="">آنر</a>
-                            </li>
-                            <li>
-                                <a href="">نوکیا</a>
-                            </li>
-                            <li>
-                                <a href="">نوکیا</a>
-                            </li>
-                        </ul>
-                    </section>
-                    <section>
-                        <h4>
-                            برند های گوشی
-                        </h4>
-                        <ul>
-                            <li>
-                                <a href="">سامسونگ</a>
-                            </li>
-                            <li>
-                                <a href="">هواوی</a>
-                            </li>
-                            <li>
-                                <a href="">اپل</a>
-                            </li>
-                            <li>
-                                <a href="">شیائومی</a>
-                            </li>
-                            <li>
-                                <a href="">آنر</a>
-                            </li>
-                            <li>
-                                <a href="">نوکیا</a>
-                            </li>
-                            <li>
-                                <a href="">نوکیا</a>
-                            </li>
-                        </ul>
-                    </section>
-                    <section>
-                        <h4>
-                            برند های گوشی
-                        </h4>
-                        <ul>
-                            <li>
-                                <a href="">سامسونگ</a>
-                            </li>
-                            <li>
-                                <a href="">هواوی</a>
-                            </li>
-                            <li>
-                                <a href="">اپل</a>
-                            </li>
-                            <li>
-                                <a href="">شیائومی</a>
-                            </li>
-                            <li>
-                                <a href="">آنر</a>
-                            </li>
-                            <li>
-                                <a href="">نوکیا</a>
-                            </li>
-                            <li>
-                                <a href="">نوکیا</a>
-                            </li>
-                        </ul>
-                    </section>
-                    <section>
-                        <h4>
-                            برند های گوشی
-                        </h4>
-                        <ul>
-                            <li>
-                                <a href="">سامسونگ</a>
-                            </li>
-                            <li>
-                                <a href="">هواوی</a>
-                            </li>
-                            <li>
-                                <a href="">اپل</a>
-                            </li>
-                            <li>
-                                <a href="">شیائومی</a>
-                            </li>
-                            <li>
-                                <a href="">آنر</a>
-                            </li>
-                            <li>
-                                <a href="">نوکیا</a>
-                            </li>
-                            <li>
-                                <a href="">نوکیا</a>
-                            </li>
-                        </ul>
-                    </section>
-                    <section>
-                        <h4>
-                            برند های گوشی
-                        </h4>
-                        <ul>
-                            <li>
-                                <a href="">سامسونگ</a>
-                            </li>
-                            <li>
-                                <a href="">هواوی</a>
-                            </li>
-                            <li>
-                                <a href="">اپل</a>
-                            </li>
-                            <li>
-                                <a href="">شیائومی</a>
-                            </li>
-                            <li>
-                                <a href="">آنر</a>
-                            </li>
-                            <li>
-                                <a href="">نوکیا</a>
-                            </li>
-                            <li>
-                                <a href="">نوکیا</a>
-                            </li>
-                        </ul>
-                    </section>
-                    <section>
-                        <h4>
-                            برند های گوشی
-                        </h4>
-                        <ul>
-                            <li>
-                                <a href="">سامسونگ</a>
-                            </li>
-                            <li>
-                                <a href="">هواوی</a>
-                            </li>
-                            <li>
-                                <a href="">اپل</a>
-                            </li>
-                            <li>
-                                <a href="">شیائومی</a>
-                            </li>
-                            <li>
-                                <a href="">آنر</a>
-                            </li>
-                            <li>
-                                <a href="">نوکیا</a>
-                            </li>
-                            <li>
-                                <a href="">نوکیا</a>
-                            </li>
-                        </ul>
-                    </section>
-                    <section>
-                        <h4>
-                            برند های گوشی
-                        </h4>
-                        <ul>
-                            <li>
-                                <a href="">سامسونگ</a>
-                            </li>
-                            <li>
-                                <a href="">هواوی</a>
-                            </li>
-                            <li>
-                                <a href="">اپل</a>
-                            </li>
-                            <li>
-                                <a href="">شیائومی</a>
-                            </li>
-                            <li>
-                                <a href="">آنر</a>
-                            </li>
-                            <li>
-                                <a href="">نوکیا</a>
-                            </li>
-                            <li>
-                                <a href="">نوکیا</a>
-                            </li>
-                        </ul>
-                    </section>
-                    <section>
-                        <h4>
-                            برند های گوشی
-                        </h4>
-                        <ul>
-                            <li>
-                                <a href="">سامسونگ</a>
-                            </li>
-                            <li>
-                                <a href="">هواوی</a>
-                            </li>
-                            <li>
-                                <a href="">اپل</a>
-                            </li>
-                            <li>
-                                <a href="">شیائومی</a>
-                            </li>
-                            <li>
-                                <a href="">آنر</a>
-                            </li>
-                            <li>
-                                <a href="">نوکیا</a>
-                            </li>
-                            <li>
-                                <a href="">نوکیا</a>
-                            </li>
-                        </ul>
-                    </section>
+                    @await Component.InvokeAsync("CategoryListView")
                 </div>
             </div>
         </div>
