--- a/GhasreMobile/Areas/Admin/Views/Brand/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Brand/Index.cshtml
@@ -3,3 +3,62 @@
     ViewData["Title"] = "برند ها";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+<div class="row flex-div">
+    <div class="col-md-12 flex-div pb-3 pt-3">
+        <div class="card flex-div border-0 main-shadow">
+            <div class="card-header bg-white">
+                <div class="pr-1 pt-2">
+                    <div class="form-group pb-0 mb-0">
+                        <button id="Create" data-toggle="modal" data-target="#modalSave" class="btn btn-success btn-sm">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></button>
+                    </div>
+                </div>
+            </div>
+            <div id="card-table" class="card-body flex-div">
+                <div class="table-responsive flex">
+                    <table class="table fixed">
+                        <thead class="thead-light">
+                            <tr>
+                                <th>نام</th>
+                                <th>عملیات</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td></td>
+                                <td>
+                                    <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
+                                        <a id="Edit" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="create-outline"></a>
+                                    </span>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+            <div class="card-footer bg-white">
+                <nav aria-label="Page navigation example">
+                    @*  @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })*@
+                </nav>
+            </div>
+        </div>
+    </div>
+</div>
+@section Script{
+    <script>
+
+        $("#Create").click(function () {
+            $(".modal-content").html("");
+            $.get("/Admin/Brand/Create", function (result) {
+                $(".modal-content").html(result);
+            });
+        });
+
+        $("#Edit").click(function () {
+            $(".modal-content").html("");
+            $.get("/Admin/Brand/Edit", function (result) {
+                $(".modal-content").html(result);
+            });
+        });
+    </script>
+}
