--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -84,6 +84,14 @@
                                         <span class="title">ویژگی ها</span>
                                     </a>
                                 </li>
+                                <li class="nav-item active">
+                                    <a href="/Admin/Brand" class="LoadingDiv">
+                                        <span class="icon-holder">
+                                            <i uk-icon="pricetag"></i>
+                                        </span>
+                                        <span class="title">برند</span>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item active">
