--- a/GhasreMobile/Areas/Admin/Views/Product/Components/ProperyListAdmin.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Components/ProperyListAdmin.cshtml
@@ -11,7 +11,7 @@ else
     {
         <div id="Property" class="form-inline col-md-7">
             <label class="ml-5">@item.Name:</label>
-            <input id="PropetryName" type="hidden" />
+            <input id="PropetryNameId" type="hidden" value="@item.PropertyId" />
             <input id="PropertyValue" class="form-control form-control-sm">
         </div>
     }
